unpackaged/main/default/objects/Completion_Code_Member__c/Completion_Code_Member__c.object-meta.xml
<CustomObject>
    <label>Completion Code Member</label>
    <nameField>
        <label>Completion Code Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Completion Codes Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>