unpackaged/main/default/objects/Completion_Code_Member__c/fields/Completion_Code__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completion Code</label>
    <referenceTo>Completion_Code__c</referenceTo>
    <relationshipLabel>Completion Codes Members</relationshipLabel>
    <relationshipName>Completion_Codes_Members</relationshipName>
    <type>Lookup</type>
</CustomField>