unpackaged/main/default/objects/Completion_Code_Member__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Type__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipName>Completion_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>