unpackaged/main/default/objects/Completion_Code_Member__c/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <label>SOW</label>
    <length>3</length>
    <type>Text</type>
</CustomField>